# tau.sav

./: .gitattributes  .gitignore  .gitmodules  .metadata  Cargo.toml  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
doc/: TAU_VERSION  _config.yml
example/: README.md  pubspec.yaml
example/linux/: CMakeLists.txt
integration_test/: simple_test.dart
ios/: tau.podspec
lib/: api.md  tau.dart  tau_bindings_generated.dart  utilities.md
lib/public/: audio_context.dart  audio_destination_node.dart  audio_listener.dart  audio_node.dart  audio_node_options.dart  audio_source_node.dart  gain_node.dart  media_element.dart  stereo_panner_node.dart  webaudio.dart
lib/public.sav/: audio_context.dart  audio_destination_node.dart  audio_param.dart  audio_source_node.dart  event.dart  gain_node.dart  stereo_panner_node.dart  webaudio.dart
linux/: CMakeLists.txt
macos/: tau.podspec
rust/: Cargo.toml
rust.sav/: Cargo.toml
rust.sav/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
rust/src/api/: mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_tau_core.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_tau_core.podspec
rust_builder/windows/: CMakeLists.txt
src/: CMakeLists.txt
tau/: README.md  ffigen.yaml  flutter_rust_bridge.yaml  pubspec.yaml
tau/android/: build.gradle  settings.gradle
tau/example/: pubspec.yaml
tau/ios/: tau.podspec
tau/lib/: tau.dart
tau/rust/: Cargo.toml
tau/rust/src/: frb_generated.rs
tau/rust/src/api/: simple.rs
tau/src/: tau.c
tau/web/: manifest.json
tau/windows/: CMakeLists.txt
tau_core/: Cargo.toml  flutter_rust_bridge.yaml  tau_core.podspec
tau_core/rust/: Cargo.toml
tau_core/rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
tau_core/rust/src/api/: mod.rs  simple.rs
tau_core/rust_builder/: pubspec.yaml
tau_example/flutter_js/: pubspec.yaml
tau_example/flutter_qjs/: pubspec.yaml
tau_example/in_app_web_view/: pubspec.yaml
tau_example/interactive_webview/: pubspec.yaml
tau_example/liquid/: pubspec.yaml
tau_example/rust/: pubspec.yaml
tau_example/web_audio/: pubspec.yaml
tau_ffi/: .metadata  README.md  pubspec.yaml
tau_ffi/android/: build.gradle
tau_ffi/example/: pubspec.yaml
tau_ffi/ios/: tau_ffi.podspec
tau_ffi/macos/: tau_ffi.podspec
tau_ffi/src/: CMakeLists.txt
tau_plugin/: .metadata  README.md  pubspec.yaml
tau_plugin/android/: build.gradle  settings.gradle
tau_plugin/example/: README.md  pubspec.yaml
tau_plugin/ios/: tau_plugin.podspec
tau_plugin/lib/: tau_plugin.dart  tau_plugin_method_channel.dart  (+2 more)
tau_rust/: CHANGELOG.md  ffigen.yaml  flutter_rust_bridge.yaml  pubspec.yaml
web/: index.html
(+194 files in other folders)
