[package]
name = "tau_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
#flutter_rust_bridge = { path = "../../../frb_rust" }
flutter_rust_bridge = "=2.0.0-dev.40"
web-audio-api = { version = "1.0.0-rc.6", default-features = false }
env_logger = "0.11.3"

extend = "1.2.0"
anyhow = "1.0.86"
paste = "1.0.15"
delegate-attr = "0.3.0"


log = "0.4.21"
trace = "0.1.7"
oslog = "0.2.0"
lazy_static = "1.4.0"
simple-log = "1.6.0"
parking_lot = "0.12.2"
sink = "0.1.0"
futures = "0.3.30"
flutter_logger = "0.6.1"


[profile.dev]
debug = true
strip = false
opt-level = 0

[profile.release]
strip = true
debug = false
opt-level = 0

